# cm0_slint

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
ui/: app-window.slint
